# MOSuite-Galaxy

./: .gitignore  .nojekyll  .pre-commit-config.yaml  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  LICENSE.html  README.md  README.qmd  VERSION  batch_correction.xml  cite.html  format_values.py  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/: CONTRIBUTING.md  WORDLIST
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: auto-format.yml  build-python.yml  build.yml  docs-quarto.yml  draft-release.yml  post-release.yml  techdev-project.yml  user-projects.yml
docs/: _help.qmd  _intro.qmd  _quarto.yml  _workflow-embed.qmd  cite.qmd  index.qmd
galaxy_tools/: deg_gene_list.xml
site_libs/bootstrap/: bootstrap-3b1de569185897501411def4db9abafe.min.css  bootstrap-641e291507344fb00f944e050573e737.min.css  bootstrap-dark-676859b264a89d9d4386028e6267410a.min.css  bootstrap-dark-c319ce0831096bfe64af10b873e73c9f.min.css
src/galaxysynth/: galaxy_xml_synthesizer.py  util.py
templates/: README.md  galaxy.R
templates/1_mosuite-templates/: batch_correct_counts.json  clean_raw_counts.json  create_multiOmicDataSet_from_files.json  diff_counts.json  filter_counts.json  filter_diff.json  initialize-templates.py  normalize_counts.json  plot_expr_heatmap.json  plot_pca_3d.json  plot_venn_diagram.json  plot_volcano_enhanced.json  plot_volcano_summary.json
templates/2_blueprints/: batch_correct_counts.json  clean_raw_counts.json  create_multiOmicDataSet_from_files.json  diff_counts.json  filter_counts.json  filter_diff.json  normalize_counts.json  plot_expr_heatmap.json  plot_pca_2d.json  plot_pca_3d.json  plot_venn_diagram.json  plot_volcano_enhanced.json  plot_volcano_summary.json
templates/3_galaxy-tools/: batch_correction.xml  clean_raw_counts.xml  create_multi-omic_dataset_from_files.xml  deg_analysis.xml  deg_gene_list.xml  differential_analysis.xml  differential_counts_analysis.xml  filter_differential_counts.xml  filter_differential_features.xml  filter_low_counts.xml  format_values.py  normalization.xml  pca_2d.xml  pca_3d.xml  plot_expression_heatmap.xml  (+4 more)
tests/: test_cli.py  test_format_values.py  test_galaxy_xml_synthesizer.py  test_needs_regeneration.py
workflow/: Galaxy-Workflow-MOSuite.ga
(+5 files in other folders)
