[build-system]
requires = [
    "setuptools >= 62.3.0",
    "setuptools-scm",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name = 'galaxysynth'
dynamic = ['version','readme']
description = "Galaxy XML Synthesizer for MOSuite"
authors = [
    {name = "Kelly Sovacool", email = "kelly.sovacool@nih.gov"},
    {name = "Andrei Bombin", email = "andrei.bombin@nih.gov"},
    {name = "Vishal Koparde", email = "vishal.koparde@nih.gov"},
]
maintainers = [
    {name = "CCR Collaborative Bioinformatics Resource", email = "ccbr@mail.nih.gov"},
]
license = {file = "LICENSE.md"}
classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT license",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "Click >= 8.1.3",
    "cffconvert>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "black >= 23.10.0",
    "jupyter",
    "pre-commit",
    "ruff"
]
test = [
    "pytest",
    "pytest-cov"
]
docs = [
    "quartodoc >= v0.7.6"
]
[project.scripts]
galaxysynth = "galaxysynth.galaxy_xml_synthesizer:main"

[project.urls]
Repository = "https://github.com/CCBR/MOSuite-Galaxy"

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
# remember to use single quotes for regex in TOML
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
]
override_SS05 = [  # override SS05 to allow docstrings starting with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]

[tool.setuptools.package-data]
"*" = ["LICENSE.md", "CHANGELOG.md", "templates/**"]
"galaxysynth.templates" = ["templates/*"]

[tool.setuptools.dynamic]
version = {file = "src/galaxysynth/VERSION"}
readme = {file = "README.md"}
